# GameOfLife

./: CMakeLists.txt  README.md  rebuild.sh
include/GameOfLife/core/: App.hpp  Camera.hpp  Grid.hpp  HUD.hpp  Utils.hpp
src/: main.cpp
src/core/: App.cpp  Grid.cpp  HUD.cpp  Utils.cpp
